--- a/assets/css/ot-admin.css
+++ b/assets/css/ot-admin.css
@@ -248,9 +248,9 @@ select.option-tree-ui-select option { padding: 3px 15px !important; }
 .colorpicker_hue div                  { position: absolute; width: 35px; height: 9px; overflow: hidden; background: url(../images/colorpicker/color_indicator.png) left top; margin: -5px 0 0 0; }
 .colorpicker_new_color                { position: absolute; width: 60px; height: 30px; right: 80px; top: 10px; background: #f00; }
 .colorpicker_current_color            { position: absolute; width: 60px; height: 30px; right: 10px; top: 10px; background: #f00; }
-.colorpicker input                    { background-color: transparent !important; border: 1px solid transparent !important; position: absolute !important; font-size: 10px !important; font-family: Arial, Helvetica, sans-serif !important; color: #666 !important; top: 6px !important; right: 11px !important; text-align: right !important; margin: 0 !important; padding: 0 !important; height: 11px !important;line-height: 11px !important; }
+.colorpicker input                    { background-color: transparent !important; border: 1px solid transparent !important; position: absolute !important; font-size: 10px !important; font-family: Arial, Helvetica, sans-serif !important; color: #666 !important; top: 0px !important; right: 12px !important; text-align: right !important; margin: 0 !important; padding: 0 !important; height: 22px !important;line-height: 22px !important; }
 .colorpicker_hex                      { position: absolute; width: 72px; height: 22px; background: url(../images/colorpicker/color_hex.png) top; left: 201px; bottom: 9px; }
-.colorpicker_hex input                { right: 6px; }
+.colorpicker_hex input                { left: 13px; height: 22px; line-height: 22px; padding: 10px; }
 .colorpicker_field                    { height: 22px; width: 62px; background-position: top; position: absolute; }
 .colorpicker_field span               { position: absolute; width: 12px; height: 22px; overflow: hidden; top: 0; right: 0; cursor: n-resize; }
 .colorpicker_rgb_r                    { background-image: url(../images/colorpicker/color_rgb_r.png); top: 49px; left: 201px; }
